# LearnOpenGL

./: CMakeLists.txt
shaders/: fragmentShader.txt  vertexSahder.txt
src/: main.cpp
src/render/: ShaderProgram.cpp  ShaderProgram.h  texture.cpp  texture.h
